# montaj_v362_part_detection_system

./: CMakeLists.txt  README.md  start.sh
kullanici_arayuzu/: kullanici_arayuzu  kullanici_arayuzu.c  makefile  mfile-resim  mosq.c  mosq.h  tema.css
src/: baglanti_kur.h  baglanti_kur.hpp  fatih_kapi_kolu.hpp  goruntu_kaydet.h  goruntu_kaydet.hpp  goruntuyu_isle.h  goruntuyu_isle.hpp  goruntuyu_kaydet.hpp  includelar.h  includelar.hpp  kamera_baglanti_kur.cpp  kamera_baglanti_kur.hpp  kameradan_goruntu_al.h  kameradan_goruntu_al.hpp  kontrol_fonksiyonu_ayna_kapagi.hpp  kontrol_fonksiyonu_kayar_kapi.hpp  kontrol_fonksiyonu_on_kapi.hpp  kontrol_fonksiyonu_on_kapi.hpp.save  kontrol_fonksiyonu_yan_cita.hpp  main.cpp  montaj_v362_parca_kontrol_sistemi.cpp  montaj_v362_part_detection_system.cpp  mosq_baslat.h  mosq_baslat.hpp  mosq_bitir.h  mosq_bitir.hpp  mosq_mesaj_gonder.h  mosq_mesaj_gonder.hpp  server_kur.h  server_kur.hpp  str_split.h  str_split.hpp
